# rust-example

./: Cargo.toml  Dockerfile  README.MD  build.rs  docker-compose.yml
proto/: example.proto
resources/: app-conf.yml  log4rs-conf.yml
src/: data_model.rs  kafka_consumer.rs  main.rs  vehicle_service_grpc.rs
src/configuration/: init_config.rs  settings.rs
