[package]
name = "rust-rocksdb-example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#openssl = { version = "0.10", features = ["vendored"] }
rocksdb = "0.17.0"
#kafka = "0.6.2"
rdkafka = { version = "0.25", features = ["cmake-build"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"