[package]
name = "rust-rocksdb-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.6.1"
prost = "0.9.0"
rocksdb = "0.17.0"
rdkafka = { version = "0.25", features = ["cmake-build"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
log = "0.4.14"
log4rs = "1.0.0"
config = "0.11.0"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.6.0"
